--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -59,17 +59,87 @@
   height: 100px;
   background-color: #fff;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+.header-title {
+  font-size: 24px;
+  color: #333;
+}
+.header-button a {
+  color: darkred;
+  padding: 20px;
+  border: 1px solid darkred;
+}
+
 .messages {
   width: calc(100vw - 300px);
   height: calc(100vh - 100px - 90px);
   background-color: #FAFAFA;
   padding: 46px 40px 0;
+  overflow: scroll;
 }
+.message {
+  margin-top: 10px;
+}
+.upper-message {
+  display: flex;
+}
+.message-user {
+  font-size: 16px;
+  color: #434A54;
+}
+.message-date {
+  font-size: 12px;
+  color: #999;
+  padding-left: 10px;
+}
+.lower-message {
+  margin-top: 10px;
+}
+.message-content {
+  font-size: 14px;
+  color: #434A54;
+}
+
 .form {
   width: calc(100vw - 300px);
   height: 90px;
   background-color: #ddd;
   padding: 20px 40px;
+  display: flex;
+}
+.form-input {
+  width: 100%;
+  background-color: white;
+  display: flex;
+}
+.form-message {
+  width: 100%;
+  height: 50px;
+  padding-left: 10px;
+  border: none;
+}
+.form-submit {
+  height: 50px;
+  padding: 0 20px;
+  background-color: #38AEF0;
+  font-size: 16px;
+  color: white;
+  margin-left: 15px;
+  border: none;
+}
+.hidden {
+  display: none;
+}
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
 }
 /* /メインコンテンツ */
